HelloUltraviolet/Fixtures/RejectedSource/Expressions/CallArgNotPlace/Expected.uv
//! Expected diagnostic metadata for the CallArgNotPlace rejected-source specimen.

expectedDiagnostic("E-TYP-1603", "rule.16.Call-Arg-NotPlace")
